--- a/application.yml
+++ b/application.yml
@@ -6,9 +6,9 @@ spring:
         name: ${vcap.application.application_name:atomicnumproducer}
     data:
         mongodb:
-            database: first-atomic-number
-            username: example-user
-            password: example-password
+            database: first-atomic-number2
+            username: example-user2
+            password: example-password2
 security:
   basic:
     enabled: false
