--- a/application.yml
+++ b/application.yml
@@ -17,3 +17,13 @@ security:
 management:
    security:
      enabled: false
+
+spring:
+    profiles: dev
+    application:
+        name: ${vcap.application.application_name:atomicnumproducer}
+    data:
+        mongodb:
+            database: first-atomic-number3
+            username: example-user3
+            password: example-password3
