--- a/application.yml
+++ b/application.yml
@@ -10,6 +10,16 @@ spring:
             database: first-atomic-number2
             username: example-user2
             password: example-password2
+   
+security:
+  basic:
+    enabled: false
+
+management:
+   security:
+     enabled: false
+
+spring:
     profiles: dev
     application:
         name: ${vcap.application.application_name:atomicnumproducer}
@@ -19,12 +29,3 @@ spring:
             username: example-user3
             password: example-password3
             
-security:
-  basic:
-    enabled: false
-
-management:
-   security:
-     enabled: false
-
-    
